Cambios de Moha

--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -5,8 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title></title>
+    <title>Que hacemos</title>
 </head>
 <body>
+    <header>
+        <div class="headertop">
+            <a href="#">Contacto</a>
+            <a href="#">Intranet</a>
+            <a href="#">Identificate</a>
+            <a href="#">Sala de prensa</a>
+        </div>
+        <div class="headerbottom">
+            <div>
+                <img src="./img/logo-cabecera.png" alt="logo-principal">
+            </div>
+            <div class="menu">
+                <a href="#">Que hacemos</a>
+                <a href="#">Colaborado</a>
+                <a href="#">Voluntariado</a>
+                <a href="#">Fórmate</a>
+            </div>
+            <div>
+                <img src="./img/buscar.png" alt="busqueda" class="search">
+                <a href="#" class="button1">Haz voluntariado</a>
+                <a href="#" class="button2">Hazte socio/a</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="socialSide">
+            <p>Siguenos</p>
+            <hr class="socialLine">
+            <a href="#"><img src="./img/gorjeo.png" alt="twitter"></a>
+            <a href="#"><img src="./img/facebook.png" alt="facebook"></a>
+            <a href="#"><img src="./img/youtube.png" alt="youtube"></a>
+            <a href="#"><img src="./img/instagram.png" alt=""></a>
+            <a href="#"><img src="./img/flickr.png" alt=""></a>
+        </div>
+        <h1 class="tituloQH">Qué hacemos</h1>
+    <div class="generalQH">
+        <div class="columnaQH">
+            <img class="imagenesQH" src="./Imagenes proyecto SGI/primeraimagenpproyecto.jpg"
+                alt="primera imagen del que hacemos" width="350">
+            <p>
+            <h2>Socorros</h2>
+            </p>
+            <p>Actuamos para que las personas puedan superar las situaciones agudas o crónicas que ponen en peligro sus
+                vidas.
+            </p>
+            <p class="readQH">Leer más</p>
+        </div>
+        <div class="columnaQH">
+            <img class="imagenesQH" src="./Imagenes proyecto SGI/segundaimagenproyecto.jpg"
+                alt=" segunda imagen del 'que hacemos'" width="350">
+            <p>
+            <h2>Inclusión Social</h2>
+            </p>
+            <p>Actuamos con las personas que están en riesgo de pobreza y exclusión para que tengan las oportunidades y
+                recursos
+                necesarios para participar en la vida económica, social y cultural disfrutando un nivel de vida y
+                bienestar
+                que
+                se considere normal en la sociedad en la que ellos viven.
+            </p>
+            <p class="readQH">Leer más</p>
+        </div>
+        <div class="columna">
+            <img class="imagenesQH" src="./Imagenes proyecto SGI/terceraimagenproyecto.JPG"
+                alt="tercera imagen del que hacemos" width="350">
+            <p>
+            <h2>Empleo</h2>
+            </p>
+            <p>Actuamos promover la igualdad de oportunidades y, de esta forma, quienes se encuentran en esta situación
+                de
+                desventaja puedan acceder al mercado laboral en igualdad de condiciones.
+            </p>
+            <p class="readQH">Leer más</p>
+        </div>
+    </div>
+    </main>
 </body>
 </html>
