--- a/Inicio.html
+++ b/Inicio.html
@@ -20,7 +20,7 @@
                 <img src="./img/logo-cabecera.png" alt="logo-principal">
             </div>
             <div class="menu">
-                <a href="#">Que hacemos</a>
+                <a href="./Que-hacemos.html">Que hacemos</a>
                 <a href="#">Colaborado</a>
                 <a href="#">Voluntariado</a>
                 <a href="#">Fórmate</a>
