--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -17,7 +17,7 @@
         </div>
         <div class="headerbottom">
             <div>
-                <img src="./img/logo-cabecera.png" alt="logo-principal">
+                <a href="./Inicio.html"><img src="./img/logo-cabecera.png" alt="logo-principal"></a>
             </div>
             <div class="menu">
                 <a href="#">Que hacemos</a>
