--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Que hacemos</title>
 </head>
+
 <body>
     <header>
         <div class="headertop">
@@ -43,46 +45,126 @@
             <a href="#"><img src="./img/flickr.png" alt=""></a>
         </div>
         <h1 class="tituloQH">Qué hacemos</h1>
-    <div class="generalQH">
-        <div class="columnaQH">
-            <img class="imagenesQH" src="./Imagenes proyecto SGI/primeraimagenpproyecto.jpg"
-                alt="primera imagen del que hacemos" width="350">
-            <p>
-            <h2>Socorros</h2>
-            </p>
-            <p>Actuamos para que las personas puedan superar las situaciones agudas o crónicas que ponen en peligro sus
-                vidas.
-            </p>
-            <p class="readQH">Leer más</p>
+        <div class="generalQH">
+            <div class="columnaQH">
+                <img class="imagenesQH" src="./Imagenes proyecto SGI/primeraimagenpproyecto.jpg"
+                    alt="primera imagen del que hacemos" width="350">
+                <p>
+                <h2>Socorros</h2>
+                </p>
+                <p>Actuamos para que las personas puedan superar las situaciones agudas o crónicas que ponen en peligro
+                    sus
+                    vidas.
+                </p>
+                <p class="readQH">Leer más</p>
+            </div>
+            <div class="columnaQH">
+                <img class="imagenesQH" src="./Imagenes proyecto SGI/segundaimagenproyecto.jpg"
+                    alt=" segunda imagen del 'que hacemos'" width="350">
+                <p>
+                <h2>Inclusión Social</h2>
+                </p>
+                <p>Actuamos con las personas que están en riesgo de pobreza y exclusión para que tengan las
+                    oportunidades y
+                    recursos
+                    necesarios para participar en la vida económica, social y cultural disfrutando un nivel de vida y
+                    bienestar
+                    que
+                    se considere normal en la sociedad en la que ellos viven.
+                </p>
+                <p class="readQH">Leer más</p>
+            </div>
+            <div class="columna">
+                <img class="imagenesQH" src="./Imagenes proyecto SGI/terceraimagenproyecto.JPG"
+                    alt="tercera imagen del que hacemos" width="350">
+                <p>
+                <h2>Empleo</h2>
+                </p>
+                <p>Actuamos promover la igualdad de oportunidades y, de esta forma, quienes se encuentran en esta
+                    situación
+                    de
+                    desventaja puedan acceder al mercado laboral en igualdad de condiciones.
+                </p>
+                <p class="readQH">Leer más</p>
+            </div>
         </div>
-        <div class="columnaQH">
-            <img class="imagenesQH" src="./Imagenes proyecto SGI/segundaimagenproyecto.jpg"
-                alt=" segunda imagen del 'que hacemos'" width="350">
-            <p>
-            <h2>Inclusión Social</h2>
-            </p>
-            <p>Actuamos con las personas que están en riesgo de pobreza y exclusión para que tengan las oportunidades y
-                recursos
-                necesarios para participar en la vida económica, social y cultural disfrutando un nivel de vida y
-                bienestar
-                que
-                se considere normal en la sociedad en la que ellos viven.
-            </p>
-            <p class="readQH">Leer más</p>
-        </div>
-        <div class="columna">
-            <img class="imagenesQH" src="./Imagenes proyecto SGI/terceraimagenproyecto.JPG"
-                alt="tercera imagen del que hacemos" width="350">
-            <p>
-            <h2>Empleo</h2>
-            </p>
-            <p>Actuamos promover la igualdad de oportunidades y, de esta forma, quienes se encuentran en esta situación
-                de
-                desventaja puedan acceder al mercado laboral en igualdad de condiciones.
-            </p>
-            <p class="readQH">Leer más</p>
-        </div>
-    </div>
     </main>
+    <footer>
+        <section>
+            <div class="imagen">
+                <img alt="Cruz Roja" src="./img/logopequeno.png" width="115" height="30">
+            </div>
+            <div class="div1">
+                <h1>Conócenos</h1>
+                <p>Sobre Cruz Roja</p>
+                <p>Nuestra historia</p>
+                <p>Transparencia</p>
+                <p>Calidad</p>
+                <p>Centro de documentación</p>
+            </div>
+            <div class="div1">
+                <h1>Actualidad</h1>
+                <p>AHORA</p>
+                <p>Sala de prensa</p>
+                <p>Campañas</p>
+                <p>Cruz Roja en YouTube</p>
+                <p>Revista</p>
+                </p>
+            </div>
+            <div class="div1">
+                <h1>Nuestras Webs</h1>
+                <p>Cruz Roja TE ACOMPAÑA</p>
+                <p>La Fuerza V</p>
+                <p>Cruz Roja Juventud</p>
+                <p>Orientación empleo</p>
+                <p>Migrar.org</p>
+                <p>Info Prevención VIH ITS TBC</p>
+                <p>Multicanal SerCuidadorA</p>
+                <p>F. Tecnologías Sociales</p>
+                <p>Centros de Medios de Vida</p>
+            </div>
+            <div class="div2">
+                <ul>
+                    <li><img alt="Perfil" src="./img/perfil.JPG" width="20" height="20"> Intranet</li>
+                    <br>
+                    <li><img alt="Tienda" src="./img/carrito.JPG" width="20" height="20"> Tienda Online</li>
+                    <br>
+                    <li><img alt="Denuncias" src="./img/megafono.JPG" width="20" height="20"> Canal denuncias</li>
+                    <br>
+                    <li><img alt="Licitaciones" src="./img/mazo.JPG" width="20" height="20"> Licitaciones</li>
+                    <br>
+                    <li><img alt="Trabajar" src="./img/maletin.JPG" width="20" height="20"> Trabaja con Cruz Roja</li>
+                </ul>
+                <div class="RRSS">
+                    <p>Siguenos</p>
+                    <img alt="Twitter" src="./img/twittergris.JPG" width="25" height="25">
+                    <img alt="Facebook" src="./img/facebookgris.JPG" width="25" height="25">
+                    <img alt="YouTube" src="./img/youtubegris.JPG" width="25" height="25">
+                    <img alt="Instagram" src="./img/instagramgris.JPG" width="25" height="25">
+                    <img alt="Flirck" src="./img/flickrgris.JPG" width="25" height="25">
+                </div>
+            </div>
+        </section>
+        <section class="section2">
+            <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal"
+                    target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
+            <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada
+                    con el número 9900000098</a></p>
+            <ul>
+                <li class="inline">
+                    <a title="Contacto" href="https://www2.cruzroja.es/contacto">Contacto</a>
+                </li>
+                <li class="inline">
+                    <a title="Política de privacidad" href="https://www2.cruzroja.es/politica-de-privacidad">Política de
+                        privacidad</a>
+                </li>
+                <li class="inline">
+                    <a title="Política de Cookies" href="https://www2.cruzroja.es/politica-de-cookies">Política de
+                        Cookies</a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
+
 </html>
