--- a/Inicio.html
+++ b/Inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Cada vez mas cerca de las personas - CruzRoja</title>
 </head>
+
 <body>
     <header>
         <div class="headertop">
@@ -51,7 +53,7 @@
         <div class="noticias">
             <div>
                 <h3 class="noticia">NOTICIAS</h3>
-                <div class = "barra">
+                <div class="barra">
                 </div>
             </div>
             <br>
@@ -68,10 +70,10 @@
                         la naturaleza.
                     </p>
                     <br>
-                    <div class = "flex">
-                        <a href="#" class="leerMas">Leer más</a>  
+                    <div class="flex">
+                        <a href="#" class="leerMas">Leer más</a>
                     </div>
-                    <hr class = "hr">
+                    <hr class="hr">
                 </div>
                 <div class="columna">
                     <img class="noticiaImg" src="./img/flex2.jpg" alt="Noticia2">
@@ -83,7 +85,8 @@
                         niños y niñas, con especial énfasis en las fiestas de final de año
                     </p>
                     <br><br><br><br><br>
-                    <a href="#" class="leerMas">Leer más</a>                    <hr class="hr">
+                    <a href="#" class="leerMas">Leer más</a>
+                    <hr class="hr">
                 </div>
                 <div class="columna">
                     <img class="noticiaImg" src="./img/flex3.jpg" alt="Noticia3">
@@ -95,35 +98,36 @@
                         ayuda directa para paliar la crisis derivada del conflicto, la COVID-19 y el cambio climático.
                     </p>
                     <br><br><br><br>
-                    <a href="#" class="leerMas">Leer más</a>                    <hr class="hr">
+                    <a href="#" class="leerMas">Leer más</a>
+                    <hr class="hr">
                 </div>
             </div>
             <br>
             <div>
                 <p class="verMas">VER MÁS NOTICIAS</p>
             </div>
-            
-        </div>
-        <br>
-            <div class = "cruzGris">
-                <div>
-                    <h3 class = "numeroPB">11.589.787</h3>
-                    <div>
-                        <p class = "textoPersonas">Personas beneficiarias al año</p>
-                    </div>
-                </div>
-                <div class = "divPersonasVoluntarias">
-                    <h3 class = "numeroPV">231.053</h3>
-                    <div>
-                        <p class = "textoPersonas">Personas voluntarias</p>
-                    </div>
-                </div>
-            </div>
 
         </div>
-        <div class ="edicionPremios">
+        <br>
+        <div class="cruzGris">
+            <div>
+                <h3 class="numeroPB">11.589.787</h3>
+                <div>
+                    <p class="textoPersonas">Personas beneficiarias al año</p>
+                </div>
+            </div>
+            <div class="divPersonasVoluntarias">
+                <h3 class="numeroPV">231.053</h3>
+                <div>
+                    <p class="textoPersonas">Personas voluntarias</p>
+                </div>
+            </div>
+        </div>
+
+        </div>
+        <div class="edicionPremios">
             <div class="contenidoImagen2">
-                <p class = "textoImagen2">VII Edición de los Premios de Tecnología Humanitaria</p>
+                <p class="textoImagen2">VII Edición de los Premios de Tecnología Humanitaria</p>
                 <p class="botonImg2">¡MÁS INFORMACIÓN!</p>
             </div>
         </div>
@@ -203,7 +207,7 @@
                 <p>VER MÁS PROYECTOS</p>
             </div><br>
         </div>
-        <div class="div-banner1" >
+        <div class="div-banner1">
             <div>
                 <div class="div-Cercadeti">
                     <h1><strong>CERCA DE TI</strong></h1>
@@ -218,23 +222,25 @@
         </div>
         <div class="div-body">
             <div class="video">
-                <div >
-                    <h1><strong >CRUZ ROJA <span style="color:red">en YOUTUBE</span></strong></h1>
+                <div>
+                    <h1><strong>CRUZ ROJA <span style="color:red">en YOUTUBE</span></strong></h1>
                 </div>
                 <div class="titulos"></div>
                 <div>
                     <p>
-                        ¿Qué sucede cuando unes la tecnología con la música? 'Banda Sonora Vital' se trata de un proyecto que
-                        persigue mejorar la memoria musical de personas con Alzheimer. Por sus valores sociales e innovación fue
+                        ¿Qué sucede cuando unes la tecnología con la música? 'Banda Sonora Vital' se trata de un
+                        proyecto que
+                        persigue mejorar la memoria musical de personas con Alzheimer. Por sus valores sociales e
+                        innovación fue
                         reconocida en los Premios Cruz Roja Tecnología Humanitaria, en la categoría de Impacto.
                     </p>
                 </div>
                 <div>
                     <iframe width="740" height="515" src="https://www.youtube.com/embed/En-bnWM4GdQ"
-                    title="Banda Sonora Vital,  categoría Impacto de los Premios Cruz Roja Tecnología Humanitaria | Innovación"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                        title="Banda Sonora Vital,  categoría Impacto de los Premios Cruz Roja Tecnología Humanitaria | Innovación"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
                 </div>
             </div>
             <div class="twitter">
@@ -243,17 +249,27 @@
                 </div>
                 <div class="titulos"></div>
                 <div>
-                    <blockquote class="twitter-tweet"><p lang="es" dir="ltr">[<a href="https://twitter.com/hashtag/AHORACruzRoja?src=hash&amp;ref_src=twsrc%5Etfw">#AHORACruzRoja</a>]🖥️<br><br>Somos expertos en Innovación con fines humanitarios, por eso, hemos desarrollado una aplicación que nos ayuda a estar mejor preparados en grandes servicios preventivos como carreras o maratones.<br><br>En el vídeo te contamos todas las claves. 👇 <a href="https://t.co/n7lnzqVMs6">pic.twitter.com/n7lnzqVMs6</a></p>&mdash; Cruz Roja Española (@CruzRojaEsp) <a href="https://twitter.com/CruzRojaEsp/status/1618502874119520256?ref_src=twsrc%5Etfw">January 26, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <blockquote class="twitter-tweet">
+                        <p lang="es" dir="ltr">[<a
+                                href="https://twitter.com/hashtag/AHORACruzRoja?src=hash&amp;ref_src=twsrc%5Etfw">#AHORACruzRoja</a>]🖥️<br><br>Somos
+                            expertos en Innovación con fines humanitarios, por eso, hemos desarrollado una aplicación
+                            que nos ayuda a estar mejor preparados en grandes servicios preventivos como carreras o
+                            maratones.<br><br>En el vídeo te contamos todas las claves. 👇 <a
+                                href="https://t.co/n7lnzqVMs6">pic.twitter.com/n7lnzqVMs6</a></p>&mdash; Cruz Roja
+                        Española (@CruzRojaEsp) <a
+                            href="https://twitter.com/CruzRojaEsp/status/1618502874119520256?ref_src=twsrc%5Etfw">January
+                            26, 2023</a>
+                    </blockquote>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
         </div>
         <div class="div-atencion-logos">
             <div>
-                <h1><strong >PORTALES DE ATENCION</strong></h1>
+                <h1><strong>PORTALES DE ATENCION</strong></h1>
             </div>
             <div class="titulos"></div>
             <div class="logos-container">
-                <!--200 200-->
                 <div>
                     <img src="./img/logos/teacompana.png" alt="teacompana" width="200px" height="200px">
                     <p>Cruz Roja TE ACOMPAÑA</p>
@@ -305,10 +321,10 @@
             <div class="div1">
                 <h1>Conócenos</h1>
                 <p>Sobre Cruz Roja</p>
-                <p>Nuestra historia</p> 
+                <p>Nuestra historia</p>
                 <p>Transparencia</p>
                 <p>Calidad</p>
-                <p>Centro de documentación</p>            
+                <p>Centro de documentación</p>
             </div>
             <div class="div1">
                 <h1>Actualidad</h1>
@@ -333,16 +349,16 @@
             </div>
             <div class="div2">
                 <ul>
-                <li><img alt="Perfil" src="./img/perfil.JPG" width="20" height="20"> Intranet</li>
-                <br>
-                <li><img alt="Tienda" src="./img/carrito.JPG" width="20" height="20"> Tienda Online</li>
-                <br>
-                <li><img alt="Denuncias" src="./img/megafono.JPG" width="20" height="20"> Canal denuncias</li>
-                <br>
-                <li><img alt="Licitaciones" src="./img/mazo.JPG" width="20" height="20"> Licitaciones</li>
-                <br>
-                <li><img alt="Trabajar" src="./img/maletin.JPG" width="20" height="20"> Trabaja con Cruz Roja</li>
-            </ul>
+                    <li><img alt="Perfil" src="./img/perfil.JPG" width="20" height="20"> Intranet</li>
+                    <br>
+                    <li><img alt="Tienda" src="./img/carrito.JPG" width="20" height="20"> Tienda Online</li>
+                    <br>
+                    <li><img alt="Denuncias" src="./img/megafono.JPG" width="20" height="20"> Canal denuncias</li>
+                    <br>
+                    <li><img alt="Licitaciones" src="./img/mazo.JPG" width="20" height="20"> Licitaciones</li>
+                    <br>
+                    <li><img alt="Trabajar" src="./img/maletin.JPG" width="20" height="20"> Trabaja con Cruz Roja</li>
+                </ul>
                 <div class="RRSS">
                     <p>Siguenos</p>
                     <img alt="Twitter" src="./img/twittergris.JPG" width="25" height="25">
@@ -353,21 +369,26 @@
                 </div>
             </div>
         </section>
-        <section2>
-            <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal" target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
-            <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada con el número 9900000098</a></p>
+        <section class="section2">
+            <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal"
+                    target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
+            <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada
+                    con el número 9900000098</a></p>
             <ul>
                 <li class="inline">
                     <a title="Contacto" href="https://www2.cruzroja.es/contacto">Contacto</a>
                 </li>
                 <li class="inline">
-                    <a title="Política de privacidad" href="https://www2.cruzroja.es/politica-de-privacidad">Política de privacidad</a>
+                    <a title="Política de privacidad" href="https://www2.cruzroja.es/politica-de-privacidad">Política de
+                        privacidad</a>
                 </li>
                 <li class="inline">
-                    <a title="Política de Cookies" href="https://www2.cruzroja.es/politica-de-cookies">Política de Cookies</a>
+                    <a title="Política de Cookies" href="https://www2.cruzroja.es/politica-de-cookies">Política de
+                        Cookies</a>
                 </li>
             </ul>
-        </section2>
+        </section>
     </footer>
 </body>
+
 </html>
