--- a/Inicio.html
+++ b/Inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="./style.css">
     <title>Cada vez mas cerca de las personas - CruzRoja</title>
 </head>
+
 <body>
-    <div class="div-banner1" >
+    <div class="div-banner1">
         <div>
             <div class="div-Cercadeti">
                 <h1><strong>CERCA DE TI</strong></h1>
@@ -23,23 +25,25 @@
     </div>
     <div class="div-body">
         <div class="video">
-            <div >
-                <h1><strong >CRUZ ROJA <span style="color:red">en YOUTUBE</span></strong></h1>
+            <div>
+                <h1><strong>CRUZ ROJA <span style="color:red">en YOUTUBE</span></strong></h1>
             </div>
             <div class="titulos"></div>
             <div>
                 <p>
-                    ¿Qué sucede cuando unes la tecnología con la música? 'Banda Sonora Vital' se trata de un proyecto que
-                    persigue mejorar la memoria musical de personas con Alzheimer. Por sus valores sociales e innovación fue
+                    ¿Qué sucede cuando unes la tecnología con la música? 'Banda Sonora Vital' se trata de un proyecto
+                    que
+                    persigue mejorar la memoria musical de personas con Alzheimer. Por sus valores sociales e innovación
+                    fue
                     reconocida en los Premios Cruz Roja Tecnología Humanitaria, en la categoría de Impacto.
                 </p>
             </div>
             <div>
                 <iframe width="740" height="515" src="https://www.youtube.com/embed/En-bnWM4GdQ"
-                title="Banda Sonora Vital,  categoría Impacto de los Premios Cruz Roja Tecnología Humanitaria | Innovación"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+                    title="Banda Sonora Vital,  categoría Impacto de los Premios Cruz Roja Tecnología Humanitaria | Innovación"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
         <div class="twitter">
@@ -48,13 +52,24 @@
             </div>
             <div class="titulos"></div>
             <div>
-                <blockquote class="twitter-tweet"><p lang="es" dir="ltr">[<a href="https://twitter.com/hashtag/AHORACruzRoja?src=hash&amp;ref_src=twsrc%5Etfw">#AHORACruzRoja</a>]🖥️<br><br>Somos expertos en Innovación con fines humanitarios, por eso, hemos desarrollado una aplicación que nos ayuda a estar mejor preparados en grandes servicios preventivos como carreras o maratones.<br><br>En el vídeo te contamos todas las claves. 👇 <a href="https://t.co/n7lnzqVMs6">pic.twitter.com/n7lnzqVMs6</a></p>&mdash; Cruz Roja Española (@CruzRojaEsp) <a href="https://twitter.com/CruzRojaEsp/status/1618502874119520256?ref_src=twsrc%5Etfw">January 26, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet">
+                    <p lang="es" dir="ltr">[<a
+                            href="https://twitter.com/hashtag/AHORACruzRoja?src=hash&amp;ref_src=twsrc%5Etfw">#AHORACruzRoja</a>]🖥️<br><br>Somos
+                        expertos en Innovación con fines humanitarios, por eso, hemos desarrollado una aplicación que
+                        nos ayuda a estar mejor preparados en grandes servicios preventivos como carreras o
+                        maratones.<br><br>En el vídeo te contamos todas las claves. 👇 <a
+                            href="https://t.co/n7lnzqVMs6">pic.twitter.com/n7lnzqVMs6</a></p>&mdash; Cruz Roja Española
+                    (@CruzRojaEsp) <a
+                        href="https://twitter.com/CruzRojaEsp/status/1618502874119520256?ref_src=twsrc%5Etfw">January
+                        26, 2023</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
     <div class="div-atencion-logos">
         <div>
-            <h1><strong >PORTALES DE ATENCION</strong></h1>
+            <h1><strong>PORTALES DE ATENCION</strong></h1>
         </div>
         <div class="titulos"></div>
         <div class="logos-container">
@@ -102,4 +117,5 @@
         </div>
     </div>
 </body>
+
 </html>
