--- a/Inicio.html
+++ b/Inicio.html
@@ -116,6 +116,17 @@
             <a href="" class="a-banner2">SOLICITA MÁS INFORMACIÓN</a>
         </div>
     </div>
+    <div class="UE">
+        <div class="UE1">
+            <a href="" style="text-decoration: none;"><img src="./img/UE/UE1.png" alt="Unión Europea-Cruz Roja" height="108px" width="324px"></a>
+        </div>
+        <div class="UE2">
+            <a href="" style="text-decoration: none;"><img src="./img/UE/UE2.jpg" alt="Programa Ayuda Unión Europea" width="324px" height="140px"></a>
+        </div>
+        <div class="UE3">
+            <img src="./img/UE/UE3.png" alt="Unión Europea" width="324px" height="111px">
+        </div>
+    </div>
 </body>
 
 </html>
