Cambios de Torri

--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -47,7 +47,7 @@
         <h1 class="tituloQH">Qué hacemos</h1>
         <div class="generalQH">
             <div class="columnaQH">
-                <img class="imagenesQH" src="./Imagenes proyecto SGI/primeraimagenpproyecto.jpg"
+                <img class="imagenesQH" src="./img/primeraimagenpproyecto.jpg"
                     alt="primera imagen del que hacemos" width="350">
                 <p>
                 <h2>Socorros</h2>
@@ -59,7 +59,7 @@
                 <p class="readQH">Leer más</p>
             </div>
             <div class="columnaQH">
-                <img class="imagenesQH" src="./Imagenes proyecto SGI/segundaimagenproyecto.jpg"
+                <img class="imagenesQH" src="./img/segundaimagenproyecto.jpg"
                     alt=" segunda imagen del 'que hacemos'" width="350">
                 <p>
                 <h2>Inclusión Social</h2>
@@ -75,7 +75,7 @@
                 <p class="readQH">Leer más</p>
             </div>
             <div class="columna">
-                <img class="imagenesQH" src="./Imagenes proyecto SGI/terceraimagenproyecto.JPG"
+                <img class="imagenesQH" src="./img/terceraimagenproyecto.jpg"
                     alt="tercera imagen del que hacemos" width="350">
                 <p>
                 <h2>Empleo</h2>
