--- a/Inicio.html
+++ b/Inicio.html
@@ -273,7 +273,7 @@
                 <div>
                     <img src="./img/logos/teacompana.png" alt="teacompana" width="200px" height="200px">
                     <p>Cruz Roja TE ACOMPAÑA</p>
-                    <a href="" style="text-decoration: none; color: red;">Ver más</a>
+                    <a href="#" style="text-decoration: none; color: red;">Ver más</a>
                 </div>
                 <div>
                     <img src="./img/logos/mirarlogo.png" alt="mirarlogo" width="200px" height="200px">
@@ -310,6 +310,17 @@
         <div class="div-banner2">
             <div class="solicita-info">
                 <a href="" class="a-banner2">SOLICITA MÁS INFORMACIÓN</a>
+            </div>
+        </div>
+        <div class="UE">
+            <div class="UE1">
+                <a href="" style="text-decoration: none;"><img src="./img/UE/UE1.png" alt="Unión Europea-Cruz Roja" height="108px" width="324px"></a>
+            </div>
+            <div class="UE2">
+                <a href="" style="text-decoration: none;"><img src="./img/UE/UE2.jpg" alt="Programa Ayuda Unión Europea" width="324px" height="140px"></a>
+            </div>
+            <div class="UE3">
+                <img src="./img/UE/UE3.png" alt="Unión Europea" width="324px" height="111px">
             </div>
         </div>
     </main>
