Cambios de Victor

--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -88,6 +88,32 @@
                 <p class="readQH">Leer más</p>
             </div>
         </div>
+        <section class="que-hacemos2">
+            <div class="column">
+                <img src="./img/Health.png" alt="cuarta imagen" width="350px">
+                <h2>Salud</h2>
+                <p>Actuamos con las personas para ayudarles a mejorar la gestión de su salud.</p>
+                <a class="read" href="./img/Health.png">Leer más</a>
+            </div>
+            <div class="column">
+                <img src="./img/QUE.jpg" alt="Quinta imagen" width="350px">
+                <h2>Educación</h2>
+                <p>Actuamos con las personas para promover la Igualdad de oportunidades, participación activa y contribuir a la Lucha contra la Discriminación.</p>
+                <a class="read" href="./img/QUE.jpg">Leer más</a>
+            </div>
+            <div class="column">
+                <img src="./img/Medioambiente.png" alt="Sexta imagen" width="350px">
+                <h2>Medio Ambiente</h2>
+                <p>Actuamos en el medio ambiente como factor global, de inclusión social y mejora de la calidad de vida de los colectivos más vulnerables.</p>
+                <a class="read" href="./img/Medioambiente.png">Leer más</a>
+            </div>
+            <div class="column">
+                <img src="./img/aaaaaaaa.jpg" alt="Séptima imagen" width="350px">
+                <h2>Actividad Internacional</h2>
+                <p>Actuamos para trasladar el compromiso solidario a las poblaciones más vulnerables de otros países ofreciendo ayuda humanitaria de emergencia, preparación y mitigación del efecto de los desastres, cooperación para el desarrollo, cooperación y asistencia técnica y potenciar los centros especializados.</p>
+                <a class="read" href="./img/aaaaaaaa.jpg">Leer más</a>
+            </div>
+        </section>
     </main>
     <footer>
         <section>
