--- a/Inicio.html
+++ b/Inicio.html
@@ -58,9 +58,11 @@
             margin-right: 0.625rem;
             display: inline-block;
         }
+        .section2{
+            padding-left: 5%;
+        }
     </style>
 </head>
-
 <body>
     <section>
         <div class="imagen">
@@ -117,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section2>
+    <section2 class="section2">
         <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal" target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
         <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada con el número 9900000098</a></p>
         <ul>
