--- a/Inicio.html
+++ b/Inicio.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="description" content="En esta página tenemos la misión  de proteger la vida y la dignidad de las víctimas de la guerra o de la violencia al interior de un país prestándoles asistencia 
+        médica y humanitaria, así como promover el fortalecimiento del derecho y de los principios humanitarios universales.">-->
+    
     <!--<link rel="stylesheet" href="./style.css">-->
     <title>Cada vez mas cerca de las personas - CruzRoja</title>
     <style>
@@ -81,10 +84,9 @@
 
         .leerMas {
             color: red;
-        }
-        a{
             text-decoration: none;
         }
+      
     </style>
 </head>
 
