CAmbios de Alberto

--- a/Inicio.html
+++ b/Inicio.html
@@ -314,10 +314,12 @@
         </div>
         <div class="UE">
             <div class="UE1">
-                <a href="" style="text-decoration: none;"><img src="./img/UE/UE1.png" alt="Unión Europea-Cruz Roja" height="108px" width="324px"></a>
+                <a href="" style="text-decoration: none;"><img src="./img/UE/UE1.png" alt="Unión Europea-Cruz Roja"
+                        height="108px" width="324px"></a>
             </div>
             <div class="UE2">
-                <a href="" style="text-decoration: none;"><img src="./img/UE/UE2.jpg" alt="Programa Ayuda Unión Europea" width="324px" height="140px"></a>
+                <a href="" style="text-decoration: none;"><img src="./img/UE/UE2.jpg" alt="Programa Ayuda Unión Europea"
+                        width="324px" height="140px"></a>
             </div>
             <div class="UE3">
                 <img src="./img/UE/UE3.png" alt="Unión Europea" width="324px" height="111px">
@@ -380,7 +382,7 @@
                 </div>
             </div>
         </section>
-        <section class="section2">
+        <section2 class="section2">
             <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal"
                     target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
             <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada
@@ -398,7 +400,7 @@
                         Cookies</a>
                 </li>
             </ul>
-        </section>
+        </section2>
     </footer>
 </body>
 
