--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -47,8 +47,8 @@
         <h1 class="tituloQH">Qué hacemos</h1>
         <div class="generalQH">
             <div class="columnaQH">
-                <img class="imagenesQH" src="./img/primeraimagenpproyecto.jpg"
-                    alt="primera imagen del que hacemos" width="350">
+                <img class="imagenesQH" src="./img/primeraimagenpproyecto.jpg" alt="primera imagen del que hacemos"
+                    width="350">
                 <p>
                 <h2>Socorros</h2>
                 </p>
@@ -59,8 +59,8 @@
                 <p class="readQH">Leer más</p>
             </div>
             <div class="columnaQH">
-                <img class="imagenesQH" src="./img/segundaimagenproyecto.jpg"
-                    alt=" segunda imagen del 'que hacemos'" width="350">
+                <img class="imagenesQH" src="./img/segundaimagenproyecto.jpg" alt=" segunda imagen del 'que hacemos'"
+                    width="350">
                 <p>
                 <h2>Inclusión Social</h2>
                 </p>
@@ -75,8 +75,8 @@
                 <p class="readQH">Leer más</p>
             </div>
             <div class="columna">
-                <img class="imagenesQH" src="./img/terceraimagenproyecto.jpg"
-                    alt="tercera imagen del que hacemos" width="350">
+                <img class="imagenesQH" src="./img/terceraimagenproyecto.jpg" alt="tercera imagen del que hacemos"
+                    width="350">
                 <p>
                 <h2>Empleo</h2>
                 </p>
@@ -98,19 +98,24 @@
             <div class="column">
                 <img src="./img/QUE.jpg" alt="Quinta imagen" width="350px">
                 <h2>Educación</h2>
-                <p>Actuamos con las personas para promover la Igualdad de oportunidades, participación activa y contribuir a la Lucha contra la Discriminación.</p>
+                <p>Actuamos con las personas para promover la Igualdad de oportunidades, participación activa y
+                    contribuir a la Lucha contra la Discriminación.</p>
                 <a class="read" href="./img/QUE.jpg">Leer más</a>
             </div>
             <div class="column">
                 <img src="./img/Medioambiente.png" alt="Sexta imagen" width="350px">
                 <h2>Medio Ambiente</h2>
-                <p>Actuamos en el medio ambiente como factor global, de inclusión social y mejora de la calidad de vida de los colectivos más vulnerables.</p>
+                <p>Actuamos en el medio ambiente como factor global, de inclusión social y mejora de la calidad de vida
+                    de los colectivos más vulnerables.</p>
                 <a class="read" href="./img/Medioambiente.png">Leer más</a>
             </div>
             <div class="column">
                 <img src="./img/aaaaaaaa.jpg" alt="Séptima imagen" width="350px">
                 <h2>Actividad Internacional</h2>
-                <p>Actuamos para trasladar el compromiso solidario a las poblaciones más vulnerables de otros países ofreciendo ayuda humanitaria de emergencia, preparación y mitigación del efecto de los desastres, cooperación para el desarrollo, cooperación y asistencia técnica y potenciar los centros especializados.</p>
+                <p>Actuamos para trasladar el compromiso solidario a las poblaciones más vulnerables de otros países
+                    ofreciendo ayuda humanitaria de emergencia, preparación y mitigación del efecto de los desastres,
+                    cooperación para el desarrollo, cooperación y asistencia técnica y potenciar los centros
+                    especializados.</p>
                 <a class="read" href="./img/aaaaaaaa.jpg">Leer más</a>
             </div>
         </section>
@@ -171,7 +176,7 @@
                 </div>
             </div>
         </section>
-        <section class="section2">
+        <section2 class="section2">
             <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal"
                     target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
             <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada
@@ -189,7 +194,7 @@
                         Cookies</a>
                 </li>
             </ul>
-        </section>
+        </section2>
     </footer>
 </body>
 
