--- a/Inicio.html
+++ b/Inicio.html
@@ -51,6 +51,17 @@
             display: inline-flex;
             margin-right: 1.50rem;
         }
+        li{
+            margin-bottom: 10%;
+        }
+        .ImageSize{
+            width: 20px; 
+            height: 20px;
+        }
+        .ImageSize2{
+            width: 25px; 
+            height: 25px;
+        }
         ul{
             list-style:none
         }
@@ -99,23 +110,19 @@
         </div>
         <div class="div2">
             <ul>
-            <li><img alt="Perfil" src="./img/perfil.JPG" width="20" height="20"> Intranet</li>
-            <br>
-            <li><img alt="Tienda" src="./img/carrito.JPG" width="20" height="20"> Tienda Online</li>
-            <br>
-            <li><img alt="Denuncias" src="./img/megafono.JPG" width="20" height="20"> Canal denuncias</li>
-            <br>
-            <li><img alt="Licitaciones" src="./img/mazo.JPG" width="20" height="20"> Licitaciones</li>
-            <br>
-            <li><img alt="Trabajar" src="./img/maletin.JPG" width="20" height="20"> Trabaja con Cruz Roja</li>
+            <li><img alt="Perfil" src="./img/perfil.JPG" class ="ImageSize"> Intranet</li>
+            <li><img alt="Tienda" src="./img/carrito.JPG" class ="ImageSize"> Tienda Online</li>
+            <li><img alt="Denuncias" src="./img/megafono.JPG" class ="ImageSize"> Canal denuncias</li>
+            <li><img alt="Licitaciones" src="./img/mazo.JPG" class ="ImageSize"> Licitaciones</li>
+            <li><img alt="Trabajar" src="./img/maletin.JPG" class ="ImageSize"> Trabaja con Cruz Roja</li>
         </ul>
             <div class="RRSS">
                 <p>Siguenos</p>
-                <img alt="Twitter" src="./img/twittergris.JPG" width="25" height="25">
-                <img alt="Facebook" src="./img/facebookgris.JPG" width="25" height="25">
-                <img alt="YouTube" src="./img/youtubegris.JPG" width="25" height="25">
-                <img alt="Instagram" src="./img/instagramgris.JPG" width="25" height="25">
-                <img alt="Flirck" src="./img/flickrgris.JPG" width="25" height="25">
+                <img alt="Twitter" src="./img/twittergris.JPG" class ="ImageSize2">
+                <img alt="Facebook" src="./img/facebookgris.JPG" class ="ImageSize2">
+                <img alt="YouTube" src="./img/youtubegris.JPG" class ="ImageSize2">
+                <img alt="Instagram" src="./img/instagramgris.JPG" class ="ImageSize2">
+                <img alt="Flirck" src="./img/flickrgris.JPG" class ="ImageSize2">
             </div>
         </div>
     </section>
