--- a/Inicio.html
+++ b/Inicio.html
@@ -13,10 +13,22 @@
 <body>
     <header>
         <div class="headertop">
-            <a href="#">Contacto</a>
-            <a href="#">Intranet</a>
-            <a href="#">Identificate</a>
-            <a href="#">Sala de prensa</a>
+            <div class="lineHeaderTop">
+                <img src="./img/correo-electronico.png" alt="contacto">
+                <a href="#">Contacto</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/maletin.png" alt="intranet">
+                <a href="#">Intranet</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/usuario.png" alt="identificate">
+                <a href="#">Identificate</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/periodico.png" alt="sala de prensa">
+                <a href="#">Sala de prensa</a>
+            </div>
         </div>
         <div class="headerbottom">
             <div>
