--- a/Que-hacemos.html
+++ b/Que-hacemos.html
@@ -12,17 +12,29 @@
 <body>
     <header>
         <div class="headertop">
-            <a href="#">Contacto</a>
-            <a href="#">Intranet</a>
-            <a href="#">Identificate</a>
-            <a href="#">Sala de prensa</a>
+            <div class="lineHeaderTop">
+                <img src="./img/correo-electronico.png" alt="contacto">
+                <a href="#">Contacto</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/maletin.png" alt="intranet">
+                <a href="#">Intranet</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/usuario.png" alt="identificate">
+                <a href="#">Identificate</a>
+            </div>
+            <div class="lineHeaderTop">
+                <img src="./img/periodico.png" alt="sala de prensa">
+                <a href="#">Sala de prensa</a>
+            </div>
         </div>
         <div class="headerbottom">
             <div>
                 <a href="./Inicio.html"><img src="./img/logo-cabecera.png" alt="logo-principal"></a>
             </div>
             <div class="menu">
-                <a href="#">Que hacemos</a>
+                <a href="./Que-hacemos.html">Que hacemos</a>
                 <a href="#">Colaborado</a>
                 <a href="#">Voluntariado</a>
                 <a href="#">Fórmate</a>
