--- a/Inicio.html
+++ b/Inicio.html
@@ -2,16 +2,21 @@
 <html lang="en">
 
 <head>
+    <meta name = "David" content = "Cruz Roja, LIBERA, Juventud, 2022, COVID-19">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>Document</title>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
 
         body {
             font-family: Montserrat, "Helvetica Neue", Arial, Helvetica, sans-serif;
         }
+        
 
         .barra{
             border-bottom: 5px solid red;
