--- a/FormularioAlbertoCalzada.html
+++ b/FormularioAlbertoCalzada.html
@@ -1,53 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haz Voluntariado</title>
-    <link rel="stylesheet" href="./style.css">
+    <title></title>
+    <style>
+        .formularioglobal {
+            background-color: rgb(241, 241, 241);
+            height: auto;
+            padding-top: 50px;
+        }
+
+        .formulario {
+
+            text-align: center;
+            width: 70%;
+            margin: auto;
+        }
+
+        .espacio1 {
+            display: flex;
+            margin-left: 200px;
+            margin-right: 10px;
+            flex-wrap: wrap;
+        }
+
+        .espacio2 {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: 400px;
+        }
+
+        .campo {
+            display: flex;
+            flex-direction: column;
+            width: 33%;
+            margin-bottom: 30px;
+            margin-right: 3px;
+        }
+
+        .enviarboton input {
+            margin: auto;
+            color: white;
+            background-color: #e20613;
+            text-align: center;
+            border: 0.125rem solid #e20613;
+            width: 70px;
+        }
+
+        input,
+        select {
+            height: 40px;
+            margin-right: 30px;
+            font-size: 1rem;
+            width: auto;
+        }
+
+        label {
+            color: black;
+            font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 1.2rem;
+            line-height: 1.5625rem;
+            font-weight: normal;
+            text-align: left;
+        }
+
+        span {
+            color: red;
+        }
+
+        @media (max-width: 850px) {
+            .campo {
+                width: 100%;
+                margin-right: 0;
+            }
+        }
+        .number {
+            text-align: center;
+            font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 1.25rem;
+            font-weight: 600;
+            line-height: 1.875rem;
+            color: #e20613;
+            margin-bottom: 0.625rem;
+        }
+    </style>
 </head>
+
 <body>
-    <form method="get">
-        <label for="Nombre">Nombre</label>
-        <input type="text" name="gender" placeholder="Introduzca su nombre porfavor">
-        <label for="Primer_Apellido">Primer Apellido</label>
-        <input type="text" name="gender" value="genderm">
-        <label for="Segundo_Apellido">Segundo Apellido</label>
-        <input type="text" name="gender" value="genderm">
-        <label for="Fecha_Nacimiento">Fecha Nacimiento</label>
-        <input type="date" name="gender" value="genderm">
-        <label for="Tipo_Documento">Tipo de Documento</label>
-        <select name="" id="">
-            <option value="1">Seleccione el tipo de documento</option>
-            <option value="2">Número Identificación Fiscal</option>
-            <option value="3">Número Identificación Extranjeros</option>
-            <option value="4">Pasaporte</option>
-        </select>
-        <label for="Numero_documento">Número de documento</label>
-        <input type="number" name="gender" value="genderm">
-        <label for="Sexo">Sexo</label>
-        <select name="" id="">
-            <option value="1">Seleccione el sexo</option>
-            <option value="1">1</option>
-            <option value="1">2</option>
-        </select>
-        <label for="Telefono">Teléfono</label>
-        <input type="number" name="gender" value="genderm">
-        <label for="Idioma_comunicados">Idioma comunicados</label>
-        <select name="" id="">
-            <option value="1">Seleccione el idioma</option>
-            <option value="1">Castellano</option>
-            <option value="2">Inglés</option>
-            <option value="2">Alemán</option>
-            <option value="2">Ruso</option>
-            <option value="2">Chino</option>
-        </select>
-        <label for="Correo_electronico">Correo electrónico</label>
-        <input type="email" name="gender" value="genderm">
-        <label for="Correo_electronico">Repite correo electrónico</label>
-        <input type="email" name="gender" value="genderm">
-    </form>
-    
+    <section class="formularioglobal">
+        <form action="post" class="formulario">
+            <div class="espacio1">
+                <div class="campo">
+                    <label for="nombre">Nombre <span>*</span></label>
+                    <input type="text" name="nombre" required>
+                </div>
+                <div class="campo">
+                    <label for="apellido1">Primer Apellido <span>*</span></label>
+                    <input type="text" name="apellido1" required>
+                </div>
+                <div class="campo">
+                    <label for="apellido2">Segundo Apellido</label>
+                    <input type="text" name="apellido2">
+                </div>
+                <div class="campo">
+                    <label for="fechaNacimiento">Fecha de Nacimiento <span>*</span></label>
+                    <input type="date" name="fechaNacimiento" required>
+                </div>
+                <div class="campo">
+                    <label for="Tipo_Documento">Tipo de Documento <span>*</span></label>
+                    <select name="tipoDocumento">
+                        <option value="seleccion">Seleccione el tipo de documento</option>
+                        <option value="Número-Identificación-Fiscal">Número Identificación Fiscal</option>
+                        <option value="Número-Identificación-Extranjeros">Número Identificación Extranjeros</option>
+                        <option value="Pasaporte">Pasaporte</option>
+                    </select>
+                </div>
+                <div class="campo">
+
+                    <label for="numeroDocumento">Número de Documento</label>
+                    <input type="text" name="numeroDocumento">
+                </div>
+                <div class="campo">
+                    <label for="Sexo">Sexo <span>*</span></label>
+                    <select name="sexo">
+                        <option value="sexo">Seleccione el sexo</option>
+                        <option value="Hombre">Hombre</option>
+                        <option value="Hombre">Mujer</option>
+                    </select>
+                </div>
+                <div class="campo">
+                    <label for="telefono">Teléfono de Contacto <span>*</span></label>
+                    <input type="tel" name="telefono">
+                </div>
+                <div class="campo">
+                    <label for="Idioma_comunicados">Idioma comunicados <span>*</span></label>
+                    <select name="Idioma_comunicados">
+                        <option value="idioma">Seleccione el idioma</option>
+                        <option value="Castellano">Castellano</option>
+                        <option value="Inglés">Inglés</option>
+                        <option value="Alemán">Alemán</option>
+                        <option value="Ruso">Ruso</option>
+                        <option value="Chino">Chino</option>
+                    </select>
+                </div>
+            </div>
+            <div class="espacio2">
+                <div class="campo">
+                    <label for="email">Correo Electrónico <span>*</span></label>
+                    <input type="email" name="email">
+                </div>
+                <div class="campo">
+                    <label for="email2">Repetir Correo Electrónico<span>*</span></label>
+                    <input type="email" name="email2">
+                </div>
+            </div>
+            <div class="enviarboton">
+                <input type="submit" value="Enviar">
+            </div>
+        </form>
+    </section>
+
 </body>
+
 </html>
