--- a/FormularioJavier.html
+++ b/FormularioJavier.html
@@ -61,7 +61,7 @@
         </div>
         </div>
         <div class="form1">
-            <form action="post" class="generalForm1">
+            <form action="get" class="generalForm1">
                 <div class="formColum1">
                     <div>
                         <label for="nombre-persona-contacto">Nombre persona de contacto<span class="acent">*</span></label><br><br>
