--- a/Inicio.html
+++ b/Inicio.html
@@ -38,7 +38,7 @@
                 <a href="./Que-hacemos.html">Que hacemos</a>
                 <a href="#">Colaborado</a>
                 <a href="#">Voluntariado</a>
-                <a href="#">Fórmate</a>
+                <a href="./FormularioAlejandro.html">Fórmate</a>
             </div>
             <div>
                 <img src="./img/buscar.png" alt="busqueda" class="search">
